Add a Dockerfile to make it easy for newcomers and people not on Fedora to build these sites. Fix up dev server to work in the container.
Signed-off-by: Rick Elrod <rick@elrod.me>

--- a/Makefile.in
+++ b/Makefile.in
@@ -96,6 +96,10 @@ test: 	$(HTTPDDIR)/conf/httpd.conf $(HTTPDDIR)/conf/languages.conf
 	/usr/sbin/httpd -d $(HTTPDDIR) -f conf/httpd.conf
 	@echo "Test instance started at: http://localhost:5000/"
 
+testfg: 	$(HTTPDDIR)/conf/httpd.conf $(HTTPDDIR)/conf/languages.conf
+	@echo "Starting test instance at: http://localhost:5000/"
+	/usr/sbin/httpd -DFOREGROUND -d $(HTTPDDIR) -f conf/httpd.conf
+
 stoptest: clean
 	pid=`cat $(HTTPDDIR)/run/httpd.pid` && \
 	kill -TERM $$pid
