build en site independently of LINGUAS content

--- a/start.fedoraproject.org/Makefile
+++ b/start.fedoraproject.org/Makefile
@@ -1,8 +1,9 @@
 include ../Makefile.in
 
-$(LANGUAGES): % : | static rss-cache po/%.mo data/templates/translations.html
+en $(LANGUAGES): % : | static rss-cache po/%.mo data/templates/translations.html
 	$(PYTHON) $(BUILDDIR)/build.py -o out -i data/content -l $@ -p po -b $(BASEPATH)
 
 rss-cache:
 	@echo Caching Magazine Feed...
 	$(PYTHON) $(PWD)/build/magfeed.py -o out -s static -b $(BASEPATH)
+
