--- a/labs.fedoraproject.org/Makefile
+++ b/labs.fedoraproject.org/Makefile
@@ -1,5 +1,5 @@
 include ../Makefile.in
 
-$(LANGUAGES): % : | static rss-cache po/%.mo data/templates/translations.html
+en $(LANGUAGES): % : | static rss-cache po/%.mo data/templates/translations.html
 	$(PYTHON) $(BUILDDIR)/build.py -o out -i data/content -l $@ -p po -b $(BASEPATH)
 
