ignore pullpos for non-translated/retired site

--- a/getfedora.org/Makefile
+++ b/getfedora.org/Makefile
@@ -1,5 +1,8 @@
 include ../Makefile.in
 
+# moved (see fedora-web/websites)
+pullpos: ;
+
 $(LANGUAGES): % : | static rss-cache po/%.mo data/templates/translations.html
 	$(PYTHON) $(BUILDDIR)/build.py -o out -i data/content -l $@ -p po -b $(BASEPATH)
 
