--- a/fedoraproject.org/Makefile
+++ b/fedoraproject.org/Makefile
@@ -1,5 +1,8 @@
 include ../Makefile.in
 
+# retired? 
+pullpos: ;
+
 $(LANGUAGES): % : | static rss-cache po/%.mo data/templates/translations.html
 	$(PYTHON) $(BUILDDIR)/build.py -o out -i data/content -l $@ -p po -b $(BASEPATH)
 
