--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -3,7 +3,7 @@
 name: websites
 
 # Title will be visible on the page.
-title: Fedora Websites
+title: Fedora Websites & Apps
 
 # If you don't plan to have multiple versions of the docs (for example, to document multiple versions of some software), you can ignore this field. Otherwise, change "master" to a specific version.
 version: master
@@ -14,3 +14,5 @@ start_page: ROOT:index
 # This lists all the menu definitions of your component.
 nav:
 - modules/ROOT/nav.adoc
+- modules/runbook/nav.adoc
+- modules/dev/nav.adoc
